[package]
name = "wgpu-profiler"
version = "0.16.1"
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2021"
description = "Simple profiler scopes for wgpu using timer queries"
homepage = "https://github.com/Wumpf/wgpu-profiler"
repository = "https://github.com/Wumpf/wgpu-profiler"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[features]
tracy = ["tracy-client", "profiling/profile-with-tracy"]

[lib]

[dependencies]
parking_lot = "0.12"                                 # Note that wgpu already depends on parking_lot as well, so this doesn't add much.
thiserror = "1"
tracy-client = { version = "0.16", optional = true }
wgpu = "0.19"

[dev-dependencies]
futures-lite = "2"
profiling = { version = "1" }
tracy-client = "0.16.1"
winit = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "=0.3.67" # Prevent upgrading web-sys to 0.3.68 which would break wgpu right
