[package]
name = "wgpu-profiler"
version = "0.18.1"
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2021"
description = "Simple profiler scopes for wgpu using timer queries"
homepage = "https://github.com/Wumpf/wgpu-profiler"
repository = "https://github.com/Wumpf/wgpu-profiler"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[lints]
clippy.doc_markdown = "warn"

[features]
tracy = ["dep:tracy-client", "profiling/profile-with-tracy"]

[lib]

[dependencies]
parking_lot = "0.12" # Used for Mutex & RwLock. Note that wgpu already depends on parking_lot as well.
thiserror = "1"
wgpu = "22.1.0"

tracy-client = { version = "0.17", optional = true }


[dev-dependencies]
futures-lite = "2"
profiling = { version = "1" }
tracy-client = "0.17.0"
winit = "0.30"
